fix misalignment

--- a/frontend/src/components/placementVisuals/Placement.scss
+++ b/frontend/src/components/placementVisuals/Placement.scss
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    gap: 1%
 }
 
 .flex-column {
